[gd_scene load_steps=15 format=3 uid="uid://deki4efnv6lnl"]

[ext_resource type="Script" uid="uid://5g38hdwqe6f4" path="res://Scripts/pause.gd" id="1_o80xk"]
[ext_resource type="Shader" uid="uid://bp0oy4iyg7wrs" path="res://Shaders/pause.gdshader" id="2_l2mpd"]
[ext_resource type="Texture2D" uid="uid://i5mn4jl5i4vb" path="res://Assets/Visuals/HUD/SpritesheetUI.png" id="3_5a6ek"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5a6ek"]
shader = ExtResource("2_l2mpd")
shader_parameter/amount = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_e0jm0"]
atlas = ExtResource("3_5a6ek")
region = Rect2(0, 0, 152.989, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fojq"]
atlas = ExtResource("3_5a6ek")
region = Rect2(153, 0, 115, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsogc"]
atlas = ExtResource("3_5a6ek")
region = Rect2(153, 58, 115, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pswh"]
atlas = ExtResource("3_5a6ek")
region = Rect2(153, 29, 115, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_54e2h"]
atlas = ExtResource("3_5a6ek")
region = Rect2(153, 0, 115, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfiib"]
atlas = ExtResource("3_5a6ek")
region = Rect2(153, 58, 115, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoltt"]
atlas = ExtResource("3_5a6ek")
region = Rect2(153, 29, 115, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vhw8"]
atlas = ExtResource("3_5a6ek")
region = Rect2(153, 0, 115, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7l8j"]
atlas = ExtResource("3_5a6ek")
region = Rect2(153, 58, 115, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8a8b"]
atlas = ExtResource("3_5a6ek")
region = Rect2(153, 29, 115, 29)

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o80xk")
title_screen = "uid://dla6lljlmctmb"

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_5a6ek")
layout_mode = 0
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = -62.0
offset_top = -82.0
offset_right = 62.0
offset_bottom = 82.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer"]
position = Vector2(57, 6)
texture = SubResource("AtlasTexture_e0jm0")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 43
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_3fojq")
texture_pressed = SubResource("AtlasTexture_nsogc")
texture_hover = SubResource("AtlasTexture_0pswh")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Continue"]
offset_top = -1.0
offset_right = 115.0
offset_bottom = 23.0
text = "Continuar"
horizontal_alignment = 1

[node name="Settings" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_54e2h")
texture_pressed = SubResource("AtlasTexture_vfiib")
texture_hover = SubResource("AtlasTexture_qoltt")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Settings"]
offset_top = 2.0
offset_right = 144.0
offset_bottom = 25.0
scale = Vector2(0.8, 0.8)
text = "Configurações"
horizontal_alignment = 1

[node name="MainMenu" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_2vhw8")
texture_pressed = SubResource("AtlasTexture_r7l8j")
texture_hover = SubResource("AtlasTexture_o8a8b")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MainMenu"]
offset_top = 2.0
offset_right = 143.0
offset_bottom = 55.0
scale = Vector2(0.8, 0.8)
text = "Menu Principal
"
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
